# rust_math

./: .gitignore  Cargo.toml  README.md  profile_command.txt  run_cpu.sh  run_gpu.sh
.github/workflows/: ci.yml  release.yml
benches/: matmul.rs
shaders/: matmul.metal
src/: backend.rs  cpu_backend.rs  dispatcher.rs  job.rs  lib.rs  main.rs  metal_backend.rs  metal_backend_impl.rs  workers.rs
tests/: integration_tests.rs  lib_tests.rs
